@@ -1,3 +1,6 @@
+=== 2011-08-14 [emboss]
+* Implemented creation of a signature.
+
 === 2011-08-13 [emboss]
 * Compute digest value of references.
 
